// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Circle component tests changing 1`] = `
<div
  className="content "
  data-cypress="circle"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-cypress="circle-head"
  />
  <div
    className="circle   changing"
    data-cypress="circle-color"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
    data-cypress="circle-index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-cypress="circle-tail"
  />
</div>
`;

exports[`Circle component tests default 1`] = `
<div
  className="content "
  data-cypress="circle"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-cypress="circle-head"
  />
  <div
    className="circle   default"
    data-cypress="circle-color"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
    data-cypress="circle-index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-cypress="circle-tail"
  />
</div>
`;

exports[`Circle component tests modified 1`] = `
<div
  className="content "
  data-cypress="circle"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-cypress="circle-head"
  />
  <div
    className="circle   modified"
    data-cypress="circle-color"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
    data-cypress="circle-index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-cypress="circle-tail"
  />
</div>
`;

exports[`Circle component tests small 1`] = `
<div
  className="content "
  data-cypress="circle"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-cypress="circle-head"
  />
  <div
    className="circle  small default"
    data-cypress="circle-color"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
    data-cypress="circle-index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-cypress="circle-tail"
  />
</div>
`;

exports[`Circle component tests with element-head 1`] = `
<div
  className="content "
  data-cypress="circle"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-cypress="circle-head"
  >
    <div>
      div-block
    </div>
  </div>
  <div
    className="circle   default"
    data-cypress="circle-color"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
    data-cypress="circle-index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-cypress="circle-tail"
  />
</div>
`;

exports[`Circle component tests with element-tail 1`] = `
<div
  className="content "
  data-cypress="circle"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-cypress="circle-head"
  />
  <div
    className="circle   default"
    data-cypress="circle-color"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
    data-cypress="circle-index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-cypress="circle-tail"
  >
    <div>
      div-block
    </div>
  </div>
</div>
`;

exports[`Circle component tests with head 1`] = `
<div
  className="content "
  data-cypress="circle"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head string"
    data-cypress="circle-head"
  >
    head
  </div>
  <div
    className="circle   default"
    data-cypress="circle-color"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
    data-cypress="circle-index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-cypress="circle-tail"
  />
</div>
`;

exports[`Circle component tests with index 1`] = `
<div
  className="content "
  data-cypress="circle"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-cypress="circle-head"
  />
  <div
    className="circle   default"
    data-cypress="circle-color"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
    data-cypress="circle-index"
  >
    0
  </p>
  <div
    className="text text_type_input text_color_input mt-4 absolute tail60 element"
    data-cypress="circle-tail"
  />
</div>
`;

exports[`Circle component tests with letter 1`] = `
<div
  className="content "
  data-cypress="circle"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-cypress="circle-head"
  />
  <div
    className="circle   default"
    data-cypress="circle-color"
  >
    <p
      className="text text_type_circle text_color_input letter"
    >
      A
    </p>
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
    data-cypress="circle-index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-cypress="circle-tail"
  />
</div>
`;

exports[`Circle component tests with tail 1`] = `
<div
  className="content "
  data-cypress="circle"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-cypress="circle-head"
  />
  <div
    className="circle   default"
    data-cypress="circle-color"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
    data-cypress="circle-index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 string"
    data-cypress="circle-tail"
  >
    tail
  </div>
</div>
`;

exports[`Circle component tests without letter 1`] = `
<div
  className="content "
  data-cypress="circle"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-cypress="circle-head"
  />
  <div
    className="circle   default"
    data-cypress="circle-color"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
    data-cypress="circle-index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-cypress="circle-tail"
  />
</div>
`;
